style and dimension changes

--- a/src/app/components/ag-grid-example/ag-grid-example.component.html
+++ b/src/app/components/ag-grid-example/ag-grid-example.component.html
@@ -4,9 +4,10 @@
 <a href="https://www.ag-grid.com/angular-getting-started/" target="_blank">Go to site</a>
 
 <ag-grid-angular 
-    style="width: 500px; height: 500px;" 
+    style="width: 100vw; height: 500px;" 
     class="ag-theme-balham"
     [rowData]="machines" 
     [columnDefs]="columnDefs"
+    [rowHeight]="75"
     >
 </ag-grid-angular>
