--- a/src/app/components/virtual-scroller-example/virtual-scroller-example.component.scss
+++ b/src/app/components/virtual-scroller-example/virtual-scroller-example.component.scss
@@ -1,4 +1,10 @@
-virtual-scroller {
+table {
   width: 100%;
-  height: 200px;
+  height: 500px;
+  border-collapse: collapse;
+  border: 1px solid #dedede;
+}
+
+td, th{
+  border: 1px solid #dedede;
 }
